--- a/public/index.html
+++ b/public/index.html
@@ -126,9 +126,7 @@
             Latest Recipes
           </h4>
 
-          <div
-            class="mt-8 grid gap-y-10 md:gap-10 md:grid-cols-2 lg:grid-cols-3"
-          >
+          <div class="mt-8 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
             <!-- cards go here -->
             <div class="card hover:shadow-lg">
               <img
