--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
               <a
                 class="text-green-500 text-sm sm:text-xl hover:text-green-600"
                 href="/"
-                >Shawarmaly</a
+                >Chicken Stew</a
               >
             </h1>
             <div class="px-4 cursor-pointer md:hidden hamburger">
